--- a/style.css
+++ b/style.css
@@ -50,7 +50,11 @@
     padding-bottom: 0.3rem;
     font-size: 1rem;
 }
-
+.cuisines{
+   font-weight:600;
+    padding: 0.4rem 0;
+    font-size: 14px;
+}
 .RestaurantName{
 text-align: center;
 }
@@ -65,6 +69,8 @@ display: flex;
 flex-wrap: wrap;
 
 }
+
+  
 
 #footer-text{
     text-align: center;
