--- a/style.css
+++ b/style.css
@@ -26,10 +26,14 @@
     display: flex; 
     align-items: center;
 }
-.nav-items>ul>li{
+
+.nav-link{
+    text-decoration: none;
+    color:#333;
+    font-weight: 800;
     padding: 0.3rem 0.8rem;
 }
-.nav-items>ul>li:hover{
+.nav-link li:hover{
     cursor: pointer;
     border-bottom: 2px solid limegreen;
 }
