--- a/style.css
+++ b/style.css
@@ -46,7 +46,8 @@
 }
 /* Resturant cards items */
 .card{
-    width:230px;
+    width:235px;
+    height:300px;
     background-color: wheat;
     margin:1rem;
     border-radius:8px;
@@ -54,6 +55,10 @@
 .cards-container {
     display: flex; 
     flex-wrap: wrap; 
+  }
+  .fa-solid {
+    font-size:12px;
+    padding: 0 0.2rem;
   }
 
 .card-skeleton{
@@ -65,7 +70,7 @@
 .card img{
     
     width:100%;
-    height:200px;
+    height:180px;
     border-radius:8px;
 
 }
@@ -84,7 +89,9 @@
     font-size: 14px;
 }
 .RestaurantName{
+padding: 0.3rem 0;
 text-align: center;
+
 }
 
 .card-content{
@@ -107,7 +114,11 @@ flex-wrap: wrap;
 .restaurant-menu{
     display: flex;
 }
-.restaurantMenu-links{
+.restaurant-summary-details{
+padding: 2rem;
+}
+
+.restaurantMenu-links {
 text-decoration: none;
 color: #333;
 }
