--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
     position: sticky;
     top:0;
     z-index:10;
+    background-color: #ffffff;
     display: flex; 
     justify-content:space-between;
     margin:0.5rem 0.3rem;
