Fix:Responsive Filter Buttons

--- a/style.css
+++ b/style.css
@@ -87,6 +87,7 @@ display:none;
   display:flex;
   justify-content:center;
   align-items:center;
+  margin:2px;
    padding:2px;
    width:100%;
   
