ft:Empty Cart Case

--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@
   }
   
   .about-desc  span {
-    background-color: tomato;
+    background-color:#d67a4c;
     color:white !important;
     padding: 0 10px;
     border-radius: 15px;
